2003-10-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* bytecode.c (execute_optimized_program):
	Revert Mike's patch temporarily.

2003-10-11  Olivier Galibert  <galibert@pobox.com>

	* window.c (Fdelete_window): Dirty the mirror structure _before_
	marking the window deleted.

2003-10-14  Jerry James  <james@xemacs.org>

	* Makefile.in.in (shlib_objs): Remove emodules.o.
	* Makefile.in.in (objs): Add emodules.o; it always has content now.
	* emacs.c (main_1): Call vars_of_module to define module-extensions.
	* emodules.c: Always set Vmodule_load_path and Vmodule_extensions.
	* emodules.h: Vmodule_load_path is now static.

2003-10-15  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule-charset.c (get_unallocated_leading_byte): #endif->#else.

2003-10-14  Jerry James  <james@xemacs.org>

	* compiler.h: Don't define __GNUC__ if using a non-GNU compiler.
	Use a consistent spacing scheme.

2003-08-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule-charset.c (get_unallocated_leading_byte): Compiler quietus.

2003-10-13  Stephen J. Turnbull  <stephen@xemacs.org>

	* nas.c (AudioLibraryVersionMajor, AudioLibraryVersionMinor):
	Ensure they are #define'd.

2003-10-13  Stephen J. Turnbull  <stephen@xemacs.org>

	* frame-x.c (x_update_frame_external_traits): Fix XtSetArg idiom.

2003-10-14  Jerry James  <james@xemacs.org>

	* compiler.h: Check __GNUC_PATCHLEVEL__ definition.
	* depend: Regenerate.

2003-10-13  Jerry James  <james@xemacs.org>

	* dumper.h: Use {BEGIN,END}_C_DECLS instead of explicit #ifdef.
	* glyphs-eimage.c: Ditto.
	* glyphs-gtk.c: Ditto.
	* glyphs-msw.c: Ditto.
	* glyphs-x.c: Ditto.
	* gtk-xemacs.h: Ditto.
	* libinterface.h: Ditto.
	* lrecord.h: Ditto.
	* process.h: Ditto.
	* symeval.h: Ditto.
	* sysdll.h: Ditto.
	* syswindows.h: Ditto.
	* text.h: Ditto.
	* lisp.h: Ditto.  Move basic compiler defines to compiler.h.
	Remove redundant definitions.  Add MALLOC attribute to xmalloc,
	xcalloc, etc.  Change attribute uses to match new compiler.h.